--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>kenza's module 4 Solution Starter </h1>
+  <h1>kenza's module 4 Solutions</h1>
   <p>check the console to see the code</p>
 </body>
 </html>
